WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
95751
[GStreamer] 0.11 build breaks due to rename of gst_message_new_duration
https://bugs.webkit.org/show_bug.cgi?id=95751
Summary
[GStreamer] 0.11 build breaks due to rename of gst_message_new_duration
Philippe Normand
Reported
2012-09-04 08:10:16 PDT
In gstreamer commit f712a9596c2bc1863edf9b816d9854eefca9ba45 gst_message_new_duration was renamed to gst_message_new_duration_changed. However the only place where we used this is in the HTTP source element and only if appsrc < 0.10.27 is used at runtime. In the case of GStreamer 1.0 this condition will be always false so we can disable this code at build time.
Attachments
Patch
(2.64 KB, patch)
2012-09-04 08:13 PDT
,
Philippe Normand
mrobinson
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Philippe Normand
Comment 1
2012-09-04 08:13:11 PDT
Created
attachment 162045
[details]
Patch
Philippe Normand
Comment 2
2012-09-04 08:45:40 PDT
Committed
r127469
: <
http://trac.webkit.org/changeset/127469
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug