[GStreamer] 0.11 build breaks due to rename of gst_message_new_duration https://bugs.webkit.org/show_bug.cgi?id=95751

Reviewed by Martin Robinson.

In gstreamer commit f712a9596c2bc1863edf9b816d9854eefca9ba45
gst_message_new_duration was renamed to
gst_message_new_duration_changed.

However the only place where we used this is in the HTTP source
element and only if appsrc < 0.10.27 is used at runtime. In the
case of GStreamer 1.0 this condition will be always false so we
can disable this code at build time.

* platform/graphics/gstreamer/WebKitWebSourceGStreamer.cpp:
(StreamingClient::didReceiveResponse):

Canonical link: https://commits.webkit.org/113622@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@127469 268f45cc-cd09-0410-ab3c-d52691b4dbfc