Source/WebCore/platform/graphics/gstreamer/WebKitWebSourceGStreamer.cpp
@@ -782,18 +782,15 @@ void StreamingClient::didReceiveResponse(ResourceHandle*, const ResourceResponse
     if (length > 0) {
         length += priv->requestedOffset;
         gst_app_src_set_size(priv->appsrc, length);
+
+#ifndef GST_API_VERSION_1
         if (!priv->haveAppSrc27) {
-#ifdef GST_API_VERSION_1
-            GstSegment* segment = &GST_BASE_SRC(priv->appsrc)->segment;
-            segment->duration = length;
-            segment->format = GST_FORMAT_BYTES;
-#else
             gst_segment_set_duration(&GST_BASE_SRC(priv->appsrc)->segment, GST_FORMAT_BYTES, length);
-#endif
             gst_element_post_message(GST_ELEMENT(priv->appsrc),
                                      gst_message_new_duration(GST_OBJECT(priv->appsrc),
                                                               GST_FORMAT_BYTES, length));
         }
+#endif
     }
 
     priv->size = length >= 0 ? length : 0;
